# blitz

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
blitzcommon/: CMakeLists.txt  common.cbp
blitzcommon/include/blitzcommon/: Collections.h  DataType.h  EnumClassHash.h  HashUtils.h  Math.h  NonCopyable.h  PlatformUtils.h  StringUtils.h
blitzcommon/src/: Collections.cpp  HashUtils.cpp  PlatformUtils.cpp  StringUtils.cpp
memory/: CMakeLists.txt
memory/include/blitzmemory/: Allocator.h  Heap.h  Memory.h  OSHeapAllocator.h  PoolAllocator.h  Precompiled.h
memory/src/: Heap.cpp  Memory.cpp  OSHeapAllocator.cpp  PoolAllocator.cpp  Precompiled.cpp
platform/: CMakeLists.txt
platform/include/platform/: Precompiled.h
platform/include/platform/event/: EventPooler.h  SDLEventPooler.h
platform/include/platform/fs/: FileSystem.h
platform/include/platform/input/: InputManager.h  KeyboardState.h  MouseState.h  SDLInputManager.h
platform/os/: CMakeLists.txt
platform/os/include/os/: FileSystem.h
platform/os/src/: FileSystem.cpp
platform/os/src/linux/: LinuxFileSystem.cpp
platform/src/: Precompiled.cpp
platform/src/event/: SDLEventPooler.cpp
platform/src/fs/: FileSystem.cpp
platform/src/input/: SDLInputManager.cpp
renderer/core/: CMakeLists.txt  blitz-renderer-core.cbp
renderer/core/include/core/: AccessOption.h  BasicRenderPass.h  BasicRenderer.h  Buffer.h  BufferFiller.h  BufferRange.h  Color.h  Context.h  DataType.h  Device.h  Framebuffer.h  FramebufferAttachment.h  FramebufferAttachmentSpec.h  Globals.h  Logger.h  Math.h  Max.h  Precompiled.h  Range.h  RenderCommand.h  RenderPass.h  RenderState.h  Renderer.h  RendererErrorCode.h  Shader.h  ShaderOutput.h  ShaderSource.h  Texture.h  TextureSampler.h  TextureSpec.h  UniformBlock.h  UniformVariable.h  VertexArray.h  Window.h
renderer/core/include/core/ogl/: BasicOpenGLRenderer.h  GLDataType.h  OpenGLBuffer.h  OpenGLBufferFiller.h  OpenGLContext.h  OpenGLDataType.h  OpenGLDevice.h  OpenGLIntegerUniformVariable.h  OpenGLShader.h  OpenGLShaderCompiler.h  OpenGLShaderInspector.h  OpenGLVertexArray.h  SimpleOpenGLBuffer.h
renderer/core/include/core/ogl/buffer/: OpenGLBuffer.h  OpenGLBufferFiller.h  SimpleOpenGLBuffer.h
renderer/core/include/core/ogl/framebuffer/: OpenGLFramebuffer.h  OpenGLRenderBufferAttachment.h  OpenGLTextureAttachment.h
renderer/core/include/core/ogl/shader/: OpenGLShader.h  OpenGLShaderCompiler.h  OpenGLShaderFactory.h  OpenGLShaderInspector.h  OpenGLVertexArray.h
renderer/core/include/core/ogl/texture/: GLTexture.h  OpenGLSyncReadTexture.h  OpenGLSyncReadWriteTexture.h  OpenGLSyncWriteTexture.h  OpenGLTexture.h  OpenGLTextureCreator.h  OpenGLTextureSampler.h  OpenGLTextureUtils.h
renderer/core/include/core/ogl/uniforms/: OpenGLBoolUniformVariable.h  OpenGLDoubleUniformVariable.h  OpenGLFloatUniformVariable.h  OpenGLIntegerUniformVariable.h  OpenGLUniformVariable.h  (+11 more)
renderer/core/include/core/sdl2/: SDL2Context.h  SDL2Device.h  SDL2Window.h
renderer/core/include/resources/: ResourceLocation.h  ResourcesHolder.h
renderer/core/include/resources/model/: AssimpModelLoader.h  Model.h  ModelLoader.h
renderer/core/include/resources/texture/: STBImage2DTextureLoader.h  TextureLoader.h
renderer/core/src/: Device.cpp
renderer/core/src/core/: BasicRenderPass.cpp  BasicRenderer.cpp  Buffer.cpp  Context.cpp  DataType.cpp  Framebuffer.cpp  Globals.cpp  Logger.cpp  Precompiled.cpp  RenderPass.cpp  RenderState.cpp  Shader.cpp  ShaderSource.cpp  Texture.cpp  TextureSampler.cpp  UniformBlock.cpp  UniformVariable.cpp  VertexArray.cpp  Window.cpp
renderer/core/src/core/ogl/: BasicOpenGLRenderer.cpp  DataType.cpp  GLDataType.cpp  OpenGLBuffer.cpp  OpenGLBufferFiller.cpp  OpenGLContext.cpp  OpenGLDataType.cpp  OpenGLDevice.cpp  OpenGLIntegerUniformVariable.cpp  OpenGLShader.cpp  OpenGLShaderCompiler.cpp  OpenGLShaderFactory.cpp  OpenGLShaderInspector.cpp  OpenGLVertexArray.cpp  SimpleOpenGLBuffer.cpp
renderer/core/src/core/sdl2/: SDL2Context.cpp  SDL2Device.cpp  SDL2Window.cpp
renderer/core/src/resources/: ResourcesHolder.cpp  STBImage2DTextureLoader.cpp  TextureLoader.cpp
renderer/core/src/resources/model/: AssimpModelLoader.cpp  ModelLoader.cpp
renderer/core/src/resources/texture/: STBImage2DTextureLoader.cpp  TextureLoader.cpp
renderer/core/uml/: arch.puml  buffers.puml  buffersClass.puml  core.puml  renderCommandUniformVariables.puml  renderPass.puml  resources.puml
renderer/front/: CMakeLists.txt
renderer/front/include/front/: Camera.h  ForwardRenderingPath.h  Material.h  ModelRenderer.h  Precompiled.h  Renderable.h  Renderer.h  RenderingPath.h  ShadersManager.h
renderer/front/src/front/: Camera.cpp  ForwardRenderingPath.cpp  ModelRenderer.cpp  Precompiled.cpp  RenderingPath.cpp  ShadersManager.cpp
renderer/front/umls/: front.puml  front.y.puml
resources/: CMakeLists.txt  blitz-resources.cbp
resources/include/: FileSystemTextureLoader.h  InMemoryTextureLoader.h  RefCountedResourceManager.h  RefCountedResourceManager.txx  Resource.h  ResourceLoader.h  ResourcePtr.h  ResourcePtr.txx  ResourcesManager.h
resources/include/resources/: Precompiled.h  RefCountedResourceManager.h  RefCountedResourceManager.txx  ResourceLoader.h  ResourcePtr.h  ResourcePtr.txx  ResourcesManager.h
resources/include/resources/texture/: STBImage2DTextureLoader.h  TextureLoader.h
resources/src/: FileSystemTextureLoader.cpp  InMemoryTextureLoader.cpp  Precompiled.cpp  RefCountedResourceManager.cpp  Resource.cpp  null.cpp
resources/src/resources/: ResourceManager.cpp
resources/tests/: CMakeLists.txt  RefCountedResourceManager.test.cpp  Resource.test.cpp  blitz-resources-tests
resources/umls/: resources.puml
runner/: CMakeLists.txt  TestRenderer.cpp  main.cpp  runner  runner.cbp
runner/include/: Camera.h  TestRenderer.h
scene/: CMakeLists.txt
scene/include/scene/2d/: Canvas.h  CanvasItem.h  Sprite.h  Transform2D.h
servers/: CMakeLists.txt
servers/include/servers/: VisualServer2D.h  VisualServer3D.h
servers/src/: Shapes2D.cpp  VisualServer2D.cpp
(+39 files in other folders)
